Edited the transition

--- a/welcome.html
+++ b/welcome.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 	<ul>
-	  <li class="home"><a href="#home">Gryffindor</a></li>
+
+	  <li class="home"><a href="#home"><span><img src="images/gryffindor-silver.png" width="30px" height="30px"></span> Gryffindor</a></li>
 	  <li class="about"><a href="#about">About</a></li>
 	  <li class="contact"><a href="#contact">Contact</a></li>
 	  <li class="gallery"><a href="#gallery">Gallery</a></li>
@@ -18,8 +19,8 @@
 		<span class="motto">Courage, Bravery and Determination</span><br>
 		<a href="#" class="button">Home</a>
 		<a href="#" class="button">Sign Out</a>
-		<p class="copyright">Gryffindor &copy; HNG 2019</p>
-</body>
 	</div>
-		
+
+	<p class="copyright">Gryffindor &copy; HNG 2019</p>
+</body>		
 </html>
