--- a/welcome.html
+++ b/welcome.html
@@ -7,7 +7,7 @@
 <body>
 	<ul>
 
-	  <li class="home"><a href="#home"><span><img src="images/gryffindor-silver.png" width="30px" height="30px"></span> Gryffindor</a></li>
+	  <li class="home"><a href="#home"><span class="icon"><img src="images/gryffindor-silver.png" width="30px" height="30px"></span></a></li>
 	  <li class="about"><a href="#about">About</a></li>
 	  <li class="contact"><a href="#contact">Contact</a></li>
 	  <li class="gallery"><a href="#gallery">Gallery</a></li>
